# Graphics_Project

./: .gitignore  Project Rubric (052020).xlsx  Project Rubric (062020).xlsx  Project Rubric.xlsx  README.md
Gateware/documentation/html/: _g_audio3_d_8h_source.html  _g_audio_8h_source.html  _g_audio_defines_8h_source.html  _g_blitter_8h_source.html  _g_buffered_input_8h_source.html  _g_collision_8h_source.html  _g_concurrent_8h_source.html  _g_controller_8h_source.html  _g_core_defines_8h_source.html  _g_daemon_8h_source.html  _g_direct_x11_surface_8h_source.html  _g_direct_x12_surface_8h_source.html  _g_event_generator_8h_source.html  _g_event_queue_8h_source.html  _g_event_receiver_8h_source.html  _g_file_8h_source.html  _g_graphics_defines_8h_source.html  _g_input_8h_source.html  _g_interface_8h_source.html  _g_log_8h_source.html  _g_math_defines_8h_source.html  (+198 more)
GreenScreen/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  FBXLoader.h  Graphics.cpp  Graphics.h  GreenScreen.sln  GreenScreen.vcxproj  GreenScreen.vcxproj.filters  Grid.cpp  Grid.h  LightManager.cpp  LightManager.h  Model.cpp  Model.h  ModelLoading.cpp  ModelLoading.h  ParticlePixelShader.h  ParticlePixelShader.hlsl  ParticleVertexShader.h  ParticleVertexShader.hlsl  Particles.cpp  Particles.h  PixelShader.h  PixelShader.hlsl  Planet.h  Planet01.dds  Planet02.dds  Planet03.dds  Planet1.dds  Planet3.dds  Project Rubric.xlsx  ReflectiveShader.h  ReflectiveShader.hlsl  SkyShader.hlsl  SkySphere.cpp  SkySphere.h  (+33 more)
HelloGateware/: CMakeLists.txt  main.cpp
(+85 files in other folders)
